--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset = "UTF-8">
     </head>
     <body>
-        <button id="btn">Start / Restart</button>
+        <button id="btn">Start</button>
         <h2>Score: <span id="score"></span></h2>
         <div class="grid"></div>
         <script src="app.js"></script>
